--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reset.css": "^2.0.2"
   },
@@ -43,6 +44,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.7",
+    "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
