--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint --fix src/**/*{.ts,.tsx,.js,.jsx}"
   },
   "dependencies": {
-    "@types/antd": "^1.0.0",
+    "@types/local-storage": "^1.4.0",
     "antd": "^3.26.6",
+    "axios": "^0.19.1",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "local-storage": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -33,6 +35,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/antd": "^1.0.0",
+    "@types/axios": "^0.14.0",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
