--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/local-storage": "^1.4.0",
+    "@types/redux-promise": "^0.5.28",
     "antd": "^3.26.6",
     "axios": "^0.19.1",
     "connected-react-router": "^6.6.1",
@@ -22,7 +23,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "reset.css": "^2.0.2"
   },
