--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
     "local-storage": "^2.0.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -41,6 +42,7 @@
     "@types/axios": "^0.14.0",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.0",
